--- a/app/templates/committee.html
+++ b/app/templates/committee.html
@@ -62,7 +62,9 @@
           <div>
             {{ flash.render_flash_messages() }} {% if committee_members.chairmen
             %}
-            <table class="table table-responsive text-center">
+            <table
+              class="table table-responsive border-success table-bordered text-center table-hover"
+            >
               <thead>
                 <tr>
                   <th scope="col">#</th>
@@ -188,7 +190,9 @@
           <div>
             {{ flash.render_flash_messages() }} {% if
             committee_members.secretaries %}
-            <table class="table table-responsive text-center">
+            <table
+              class="table table-responsive border-success table-bordered text-center table-hover"
+            >
               <thead>
                 <tr>
                   <th scope="col">#</th>
@@ -318,7 +322,9 @@
           <div>
             {{ flash.render_flash_messages() }} {% if
             committee_members.treasurers %}
-            <table class="table table-responsive text-center">
+            <table
+              class="table table-responsive border-success table-bordered text-center table-hover"
+            >
               <thead>
                 <tr>
                   <th scope="col">#</th>
