--- a/app/templates/block_reports.html
+++ b/app/templates/block_reports.html
@@ -89,44 +89,45 @@ block content %}
                 </div>
               </div>
             </div>
-
-            <table             class="table table-responsive border-success table-bordered text-center table-hover"
-            >
-              <thead>
-                <tr>
-                  <th colspan="5">
-                    <div
-                      style="
-                        display: flex;
-                        justify-content: space-between;
-                        width: 100%;
-                      "
-                    >
-                      <span>Host:</span>
-                      <span class="text-success">{{ host_name }}</span>
-                      <span>Date:</span>
-                      <span class="text-success"> {{ meeting_date }}</span>
-                    </div>
-                  </th>
-                </tr>
-                <tr>
-                  <th>Block</th>
-                  <th>Amount Contributed</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% if block_contributions is mapping %}
-                    {% for block, amount in block_contributions.items() %}
-                        <tr><td>{{ block }}</td><td>Kes {{ amount }}</td></tr>
-              
-                    {% endfor %} 
-                    {% else %}
-                    <tr><td colspan="2">No contributions found</td></tr>            
-                {% endif %}
-            
-              </tbody>
-              
-            </table>
+<div class="table-responsive">  <table             
+  class="table border-success table-bordered text-center table-hover"
+  >
+    <thead>
+      <tr>
+        <th colspan="5">
+          <div
+            style="
+              display: flex;
+              justify-content: space-between;
+              width: 100%;
+            "
+          >
+            <span>Host:</span>
+            <span class="text-success">{{ host_name }}</span>
+            <span>Date:</span>
+            <span class="text-success"> {{ meeting_date }}</span>
+          </div>
+        </th>
+      </tr>
+      <tr>
+        <th>Block</th>
+        <th>Amount Contributed</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% if block_contributions is mapping %}
+          {% for block, amount in block_contributions.items() %}
+              <tr><td>{{ block }}</td><td>Kes {{ amount }}</td></tr>
+    
+          {% endfor %} 
+          {% else %}
+          <tr><td colspan="2">No contributions found</td></tr>            
+      {% endif %}
+  
+    </tbody>
+    
+  </table></div>
+          
             </div>
             <!-- End Block Contribution -->
 
@@ -199,67 +200,67 @@ block content %}
               </div>
             </div>
           </div>
+<div class="table-responsive"><table             
+  class="table  border-success table-bordered text-center table-hover"
+  >
+    <thead>
+      <tr>
+        <tr>
+          <th colspan="5">
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+              "
+            >
+              <span>Host:</span>
+              <span class="text-success">{{host_name}}</span>
+              <span>Date:</span>
+              <span class="text-success"> {{meeting_date}}</span>
+            </div>
+          </th>
+        </tr>
+        <th>#</th>
+        <th scope="col">Full Names</th>
+        <th scope="col">Status</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Send reminder</th>
+      </tr>
+    </thead>
+    <tbody id="contribution-details">
+      {% for member in members %}
+      <tr>
+        <th scope="row">{{ loop.index }}</th>
 
-          <table             
-          class="table table-responsive border-success table-bordered text-center table-hover"
+        <td>{{member.full_name}}</td>
+        <td
+          style="color: {% if member.status == 'Pending' %}red{% else %}#4c9323{% endif %}"
+        >
+          {{member.status}}
+        </td>
+        <td>Kes {{member.amount}}</td>
+        <td>
+          <button
+            class="btn"
+            style="
+              background-color: #4c9323;
+              color: white;
+              font-size: small;
+            "
           >
-            <thead>
-              <tr>
-                <tr>
-                  <th colspan="5">
-                    <div
-                      style="
-                        display: flex;
-                        justify-content: space-between;
-                        width: 100%;
-                      "
-                    >
-                      <span>Host:</span>
-                      <span class="text-success">{{host_name}}</span>
-                      <span>Date:</span>
-                      <span class="text-success"> {{meeting_date}}</span>
-                    </div>
-                  </th>
-                </tr>
-                <th>#</th>
-                <th scope="col">Full Names</th>
-                <th scope="col">Status</th>
-                <th scope="col">Amount</th>
-                <th scope="col">Send reminder</th>
-              </tr>
-            </thead>
-            <tbody id="contribution-details">
-              {% for member in members %}
-              <tr>
-                <th scope="row">{{ loop.index }}</th>
-
-                <td>{{member.full_name}}</td>
-                <td
-                  style="color: {% if member.status == 'Pending' %}red{% else %}#4c9323{% endif %}"
-                >
-                  {{member.status}}
-                </td>
-                <td>Kes {{member.amount}}</td>
-                <td>
-                  <button
-                    class="btn"
-                    style="
-                      background-color: #4c9323;
-                      color: white;
-                      font-size: small;
-                    "
-                  >
-                    SEND
-                  </button>
-                </td>
-              </tr>
-              {% else %}
-              <tr>
-                <td colspan="4">No contributions found</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+            SEND
+          </button>
+        </td>
+      </tr>
+      {% else %}
+      <tr>
+        <td colspan="4">No contributions found</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table></div>
+          
 
           <!-- Pagination Controls -->
           <nav aria-label="Page navigation">
